# libsequence

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.am~  Makefile.in  README  README.md  REVISION_HISTORY.md  acinclude.m4  aclocal.m4  config-h.in.in  config.h.in  configure  configure.ac  configure.in  index.html  index.md  init_autotools.sh  libsequence2.lsm.in  libsequence2.spec.in  mkinstalldirs  pandoc.css  update.sh
.circleci/: config.yml
Sequence/: AlignStream.hpp  Alignment.hpp  AlleleCountMatrix.hpp  Clustalw.hpp  CodonTable.hpp  Comeron95.hpp  Comparisons.hpp  ComplementBase.hpp  Correlations.hpp  CountingOperators.hpp  Crit.hpp  FST.hpp  Fasta.hpp  FastaExplicit.hpp  Grantham.hpp  GranthamWeights.hpp  HKA.hpp  Hudson2001.hpp  IOhelp.hpp  Kimura80.hpp  Makefile.am  Makefile.in  NonOwningCapsules.hpp  PathwayHelper.hpp  Poly8.hpp  PolyData.hpp  PolyFunctional.hpp  PolySIM.hpp  PolySNP.hpp  PolySNPimpl.hpp  PolySites.hpp  PolyTable.hpp  PolyTableFunctions.hpp  PolyTableManip.hpp  PolyTableSlice.hpp  Ptable.hpp  Ptable8.hpp  Recombination.hpp  RedundancyCom95.hpp  Seq.hpp  (+48 more)
Sequence/Coalescent/: Coalesce.hpp  Coalescent.hpp  DemographicModels.hpp  FragmentsRescaling.hpp  Initialize.hpp  Makefile.am  Makefile.in  Mutation.hpp  NeutralSample.hpp  Recombination.hpp  SimTypes.hpp  Trajectories.hpp  TreeOperations.hpp
Sequence/Coalescent/bits/: Coalesce.tcc  DemographicModels.tcc  Makefile.am  Makefile.in  Mutation.tcc  Recombination.tcc  Trajectories.tcc
Sequence/Portability/: Makefile.am  Makefile.in  StringStreams.hpp  randomShuffleAdaptor.hpp  random_shuffle.hpp
Sequence/RNG/: Makefile.am  Makefile.in  gsl_rng_wrappers.hpp
Sequence/SummStats/: Garud.hpp  Makefile.am  Makefile.in  Snn.hpp  Uhaps.hpp  classic.hpp  classic_details.hpp  lHaf.hpp  lHap.hpp  nSL.hpp  variantCounts.hpp
Sequence/SummStatsDeprecated/: Garud.hpp  Makefile.am  Makefile.in  nSL.hpp
Sequence/bits/: AlignStream.tcc  Alignment.tcc  Clustalw.tcc  Correlations.tcc  CountingOperators.tcc  Makefile.am  Makefile.in  PolySites.tcc  PolyTable.tcc  PolyTableFunctions.tcc  PolyTableSlice.tcc  Snn.tcc  col_view_iterator.hpp  descriptiveStats.tcc  phylipData.tcc  variant_matrix_views_internal.hpp
Sequence/summstats/: Makefile.am  Makefile.in  algorithm.hpp  allele_counts.hpp  auxillary.hpp  classics.hpp  garud.hpp  generic.hpp  ld.hpp  lhaf.hpp  nSLiHS.hpp  nsl.hpp  nslx.hpp  nvariablesites.hpp  thetah.hpp  thetal.hpp  thetapi.hpp  thetaw.hpp  util.hpp
Sequence/util/: Makefile.am  Makefile.in  nibble.hpp  pack8.hpp  vectorizer.hpp
Sequence/variant_matrix/: Makefile.am  Makefile.in  filtering.hpp  msformat.hpp  windows.hpp
debian/: README.debian  changelog  changelog~  control  copyright  crontab.ex  inetd.conf.ex  info.ex  init.d.ex  manpage.1.ex  menu.ex  rules  watch.ex
doc/: Makefile  libsequence.bib  libsequence.doxygen  libsequence.doxygen.in
doc/html/: AlignStreamTest_8cc.html  AlignStreamTest_8cc.js  AlignStreamTest_8cc_source.html  (+1186 more)
examples/: FastaExplicit.cc  Makefile  Makefile.am  Makefile.in  Ptable_test.cc  baseComp.cc  bottleneck.cc  codons.cc  correlations.cc  critical_values.cc  fragments.cc  freerec.cc  gestimator.cc  int_handler.cc  int_handler.hpp  mean_nSLx.cc  ms--.cc  ms_to_VariantMatrix.cc  msbeta.cc  msmm.cc  msstats.cc  nSL_from_ms.cc  nSL_vs_nSLx.cc  polySiteVector_test.cc  slidingWindow.cc  test_SimDataIO.cc  ufs.cc  valid_dna.cc
md/: index.md
src/: ChangeLog  CoalescentCoalesce.cc  CoalescentFragmentsRescaling.cc  CoalescentInitialize.cc  CoalescentRecombination.cc  CoalescentSimTypes.cc  CoalescentTreeOperations.cc  CodonTable.cc  Comeron95.cc  Comparisons.cc  ComplementBase.cc  FST.cc  Fasta.cc  FastaExplicit.cc  Grantham.cc  GranthamWeights.cc  HKA.cc  IOhelp.cc  Kimura80.cc  Makefile.am  Makefile.in  PathwayHelper.cc  PolyData.cc  PolySIM.cc  PolySNP.cc  PolySites.cc  PolyTable.cc  PolyTableFunctions.cc  PolyTableManip.cc  Ptable.cc  Ptable8.cc  Recombination.cc  RedundancyCom95.cc  Seq.cc  SeqAlphabets.cc  SeqConstants.cc  SeqExceptions.cc  SimData.cc  SimDataIO.cc  SimParams.cc  (+20 more)
src/Coalescent/: CoalescentCoalesce.cc  CoalescentFragmentsRescaling.cc  CoalescentInitialize.cc  CoalescentMutation.cc  CoalescentRecombination.cc  CoalescentSimTypes.cc  CoalescentTreeOperations.cc
src/Seq/: Fasta.cc  FastaExplicit.cc  Seq.cc  Seq8.cc  fastq.cc
src/SummStats/: FST.cc  Garud.cc  HKA.cc  PolySIM.cc  PolySNP.cc  Recombination.cc  SummStats.cc  Uhaps.cc  classic.cc  lHaf.cc  lHap.cc  nSL.cc  preProc.cc  variantCounts.cc
src/hts/: bamreader.cc  bamrecord.cc  samflag.cc  samfunctions.cc  samrecord.cc
src/poly8/: poly8.cc
src/sam/: samfunctions.cc
src/summstats/: algorithm.hpp  allele_counts.cc  auxillary.cc  faywuh.cc  garud.cc  generic.cc  haplotype_statistics.cc  hprime.cc  hprime_faywuh_aggregator.hpp  ld.cc  lhaf.cc  nsl.cc  nsl_common.hpp  nslx.cc  nvariablesites.cc  rmin.cc  tajd.cc  thetah.cc  thetah_thetal.cc  thetapi.cc  thetaw.cc
src/summstats_deprecated/: FST.cc  Garud.cc  Recombination.cc  Snn.cc  SummStats.cc  lHaf.cc  nSL.cc
src/util/: pack8.cc
src/variant_matrix/: AlleleCountMatrix.cc  StateCounts.cc  VariantMatrix.cc  VariantMatrixViews.cc  capsule.cc  filtering.cc  nonowningcapsules.cc  windows.cc
test/: AlignStreamTest.cc  AlignmentTest.cc  ComparisonsTest.cc  CountingOperators.cc  FastaConstructors.cc  FastaExplicitIO.cc  FastaIO.cc  FastaOperations.cc  Makefile.am  Makefile.in  Poly8test.cc  PolySIMtest.cc  PolySNPtest.cc  PolySitesIO.cc  PolyTableBadBehavior.cc  PolyTableConversions.cc  PolyTableSliceTest.cc  PolyTableTweaking.cc  Ptable8test.cc  PtableTest.cc  README.md  RedundancyCom95test.cc  Seq8test.cc  SeqConversions.cc  SimpleSNPIO.cc  UhapsTest.cc  VariantMatrixFixture.hpp  VariantMatrixTest.cc  alphabets.cc  fastqConstructors.cc  fastqIO.cc  libseq_unit_tests.cc  msformatdata.cc  msformatdata.hpp  msprime_data_fixture.hpp  pack8test.cc  polySiteVector8Test.cc  polySiteVectorTest.cc  preProcTest.cc  runTests.sh  (+8 more)
test/data/: CG15644-Z.aln  README.md  data.fastq  phylip_input.txt  single_ms.txt
(+4 files in other folders)
