dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/Seq.cc])
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(libsequence, 1.8.0)

AC_ARG_ENABLE(G5,
[  --enable-G5    Turn on G5 optimizatons (default no)],
[case "${enableval}" in
  yes) G5=true ;;
  no)  G5=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-G5) ;;
esac],[G5=false])
AM_CONDITIONAL(GFIVEOPT, test x$G5 = xtrue)

AC_ARG_ENABLE(G4,
[  --enable-G4    Turn on G4 optimizatons (default no)],
[case "${enableval}" in
  yes) G4=true ;;
  no)  G4=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-G4) ;;
esac],[G4=false])
AM_CONDITIONAL(GFOUROPT, test x$G4 = xtrue)

AC_ARG_ENABLE(debug,
[  --enable-debug    Turn on debugging],
[case "${enableval}" in
  yes) debug=true ;;
  no)  debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=false])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

AC_ARG_ENABLE(profiling,
[  --enable-profiling    Turn on profiling],
[case "${enableval}" in
  yes) profiling=true ;;
  no)  profiling=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-profiling) ;;
esac],[profiling=false])
AM_CONDITIONAL(PROFILING, test x$profiling = xtrue)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CXX
AC_PROG_LIBTOOL
dnl AC_PROG_RANLIB
AC_PROG_AWK
AC_LANG(C++)
dnl chekck for inline, const, stc
AC_C_CONST
AC_C_INLINE

dnl check for functions
dnl check for wacky C headers
AC_CHECK_HEADER(ieeefp.h,IEEEFP="true")
AM_CONDITIONAL(HAVE_IEEEFP,test x$IEEEFP = xtrue)
dnl Checks for header files.
AC_HEADER_STDC
dnl AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

dnl check if extern declarations of explicit instantations are supported	
AC_CXX_EXTERN_EXPLICIT_INSTANTIAION

dnl check for C++ headers that can be problematic

dnl check 1: <strstream> vs. the standard header <sstream>
AC_CHECK_HEADER(strstream,STRSTREAM="true")
AC_CHECK_HEADER(sstream,SSTREAM="true")
AM_CONDITIONAL(HAVE_STRSTREAM, test x$STRSTREAM = xtrue)
AM_CONDITIONAL(HAVE_SSTREAM, test x$SSTREAM = xtrue)

dnl check 2: <limits> vs. <climits>
AC_CHECK_HEADER(limits,LIMITS="true")
AC_CHECK_HEADER(climits,CLIMITS="true")
AM_CONDITIONAL(HAVE_LIMITS,test x$LIMITS = xtrue)
AM_CONDITIONAL(HAVE_CLIMITS,test x$CLIMITS = xtrue)

dnl check for BOOST HEADERS
AC_CHECK_HEADER(boost/type_traits.hpp, LIBSEQUENCE_USE_BOOST=1 , [AC_MSG_ERROR([boost::type_traits required - either install boost (see http://www.boost.org) or write a replacement])])
AC_CHECK_HEADER(boost/utility.hpp, LIBSEQUENCE_USE_BOOST=1 , [AC_MSG_ERROR([boost::noncopyable required (boost/utility.hpp) - either install boost (see http://www.boost.org) or write a replacement])])
AC_CHECK_HEADER(boost/static_assert.hpp, LIBSEQUENCE_USE_BOOST=1 , [AC_MSG_ERROR([BOOST_STATIC_ASSERT required - either install boost (see http://www.boost.org) or write a replacement])])
#AC_CHECK_HEADER(boost/random/mersenne_twister.hpp,,[AC_MSG_ERROR([boost/random/mersenne_twister.hpp required - either install boost (see http://www.boost.org) or write a replacement])])
#AC_CHECK_HEADER(boost/random.hpp,,[AC_MSG_ERROR([boost/random.hpp required - either install boost (see http://www.boost.org) or write a replacement])])
AC_CHECK_HEADER(boost/tuple/tuple.hpp,,[AC_MSG_ERROR([boot::tuple required - either install boost (see http://www.boost.org) or write a replacement])])

dnl check for zlib
AC_CHECK_HEADER(zlib.h,,[AC_MSG_ERROR([zlib headers missing - cannot continue])])

jm_CHECK_TYPE_STRUCT_UTIMBUF

dnl AC_FUNC_ALLOCA
dnl AC_STRUCT_TM
dnl AC_STRUCT_ST_BLOCKS
dnl AC_FUNC_CLOSEDIR_VOID
dnl AC_CHECK_FUNCS(mkfifo)
dnl AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile Sequence/Makefile Sequence/bits/Makefile Sequence/Portability/Makefile Sequence/Coalescent/Makefile Sequence/Coalescent/bits/Makefile Sequence/RNG/Makefile libsequence2.lsm libsequence2.spec])
AC_OUTPUT
