SUBDIRS = bits Coalescent SummStats

pkgincludedir=$(prefix)/include/Sequence

pkginclude_HEADERS = AlignStream.hpp\
	Alignment.hpp\
	Clustalw.hpp\
	phylipData.hpp\
	CodonTable.hpp\
	Comeron95.hpp\
	Comparisons.hpp\
	ComplementBase.hpp\
	CountingOperators.hpp\
	FST.hpp\
	Fasta.hpp\
	fastq.hpp\
	FastaExplicit.hpp\
	Grantham.hpp\
	GranthamWeights.hpp\
	SimpleSNP.hpp\
	Hudson2001.hpp\
	Kimura80.hpp\
	PathwayHelper.hpp\
	PolySIM.hpp\
	PolySNP.hpp\
	PolySNPimpl.hpp\
	PolySites.hpp\
	PolyTable.hpp\
	PolyTableFunctions.hpp\
	PolyFunctional.hpp\
	PolyTableManip.hpp\
	PolyTableSlice.hpp\
	Recombination.hpp\
	RedundancyCom95.hpp\
	Seq.hpp\
	SeqConstants.hpp\
	SeqEnums.hpp\
	SeqExceptions.hpp\
	SeqFunctors.hpp\
	SeqProperties.hpp\
	SeqRegexes.hpp\
	SeqUtilities.hpp\
	SimData.hpp\
	SimDataIO.hpp\
	SimParams.hpp\
	SingleSub.hpp\
	Sites.hpp\
	ThreeSubs.hpp\
	Translate.hpp\
	Translate2.hpp\
	TwoSubs.hpp\
	Unweighted.hpp\
	WeightingSchemes.hpp\
	stateCounter.hpp\
	shortestPath.hpp\
	Correlations.hpp\
	descriptiveStats.hpp\
	Crit.hpp\
	HKA.hpp\
	Snn.hpp\
	samrecord.hpp\
	samflag.hpp\
	samfunctions.hpp\
	typedefs.hpp \
	Ptable.hpp \
	SummStats.hpp \
	IOhelp.hpp \
	bamrecord.hpp \
	bamreader.hpp \
	SeqAlphabets.hpp \
	preProc.hpp \
	Poly8.hpp
