pkgincludedir=$(prefix)/include/Sequence/bits

pkginclude_HEADERS = PolySites.tcc\
		PolyTable.tcc\
		PolyTableSlice.tcc\
		CountingOperators.tcc\
		AlignStream.tcc\
		Alignment.tcc\
		Clustalw.tcc\
		phylipData.tcc\
		Correlations.tcc\
		descriptiveStats.tcc\
		PolyTableFunctions.tcc\
		Snn.tcc \
		variant_matrix_views_internal.hpp
